--- a/styles.css
+++ b/styles.css
@@ -1079,7 +1079,7 @@ nav {
   z-index: 1;
 }
 
-@media (pointer: coarse) and (hover: none) {
+/* @media (pointer: coarse) and (hover: none) {
   .header-airline {
     background: url('https://source.unsplash.com/XT5OInaElMw/1600x900') black no-repeat center center scroll;
   }
@@ -1087,7 +1087,7 @@ nav {
   .header-airline video {
     display: none;
   }
-}
+} */
 
 
 
